# thermo_components

./: .gitignore  CONTRIBUTING.md  DEVLOG.md  README.md  density.py  density.spec  gui.py  gui.ui  lhv_data.db  lhv_data.py  pyproject.toml  requirements-dev.txt  requirements.txt
.do/: app.yaml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  LHV_DATA.md  REFACTOR_ROADMAP.md  WEB_APP_DESIGN.md
docs/adr/: 0001-web-stack.md
src/thermo_components/: __init__.py
src/thermo_components/adapters/: __init__.py
src/thermo_components/application/: __init__.py  dto.py
src/thermo_components/bootstrap/: __init__.py  desktop.py  web.py
src/thermo_components/domain/: __init__.py  composition.py  (+7 more)
tests/: conftest.py  test_application_calculation_session.py  test_application_use_cases.py  test_bootstrap_desktop.py  test_bootstrap_web.py  test_composition_rules.py  test_conditions_and_results.py  test_deployment_config.py  test_domain_architecture.py  test_flow_conversion.py  test_launcher_compatibility.py  test_lhv.py  test_main_window_phase5_characterization.py  test_persistence_and_resources.py  test_qt_worker.py  test_report_projection.py  test_reporting_adapter.py  test_thermo_adapter.py  test_ui_calculation_workflow.py  test_ui_composition_table.py  test_ui_flow_tab.py  test_ui_input_collection.py  test_ui_presenters.py  test_ui_report_controller.py  test_ui_report_request.py  test_ui_warning_banner.py  test_warning_policies.py  test_web_app.py  test_web_calculation_api.py  test_web_composition_api.py  test_web_flow.py  test_web_packaging.py  test_web_pages.py  test_web_report.py
(+45 files in other folders)
