[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "thermo-components"
version = "1.0.0"
description = "Desktop and web thermodynamic property calculator for mixtures"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"thermo_components.adapters.web" = [
    "static/*.css",
    "static/*.js",
    "templates/*.html",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]
addopts = "-ra"
